# sequence

./: .gitignore  CMakeLists.txt  README.md  biicode.conf
bii/: .hive.db  layout.bii  policies.bii
include/: sequence.h
include/details/: aggregate.h  container.h  element_access.h  logical.h  ordering.h  partitioning.h  projection.h  restriction.h  set_operations.h
test/: Makefile  sequence_test.cpp
